src/lesson 10/otus/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: otus-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: otus-vs
spec:
  hosts:
  - "*"
  gateways:
  - otus-gateway
  http:
  - route:
    - destination:
        host: otus
        subset: v1
      weight: 50
    - destination:
        host: otus
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: otus
spec:
  host: otus
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
